--- a/docs/06_基本类型.md
+++ b/docs/06_基本类型.md
@@ -1,9 +1,30 @@
 ## 基本类型介绍
 这个模块很重要，是基础，我们需要了解，各种语言都需要用到。
 
-| 类型 | 长度（字节） | 默认值 | 说明 |
-| --- | --- | --- | --- | --- |
-| bool | 1 | false |  |
+| 类型           | 长度（字节） | 默认值   | 说明                                  |
+|--------------|--------|-------|-------------------------------------|
+| bool         | 1      | false | 1                                   |
+| byte         | 1      | 0     | uint8                               |
+| rune         | 4      | 0     | Unicode Code Point,int32            |
+| int,uint     | 4 或 8  | 0     | 32或64位                              |
+| int8,uint8   | 1      | 0     | -128~127,0~255,**byte是uint8的别名**    |
+| int16,uint16 | 2      | 0     | -32768~32767,0~65535                |
+| int32,uint32 | 4      | 0     | -21亿~21亿,0～42亿,**rune是int32别名**     |
+| int64,uint64 | 8      | 0     |                                     |
+| float32      | 4      | 0.0   |                                     |
+| float64      | 8      | 0.0   |                                     |
+| complex64    | 8      |       |                                     |
+| complex128   | 16     |       |                                     |
+| uintptr      | 4或8    |       | 以存储指针的uint32或uint64整数               |
+| array        |        |       | 值类型                                 |
+| struct       |        |       | 值类型                                 |
+| string       |        | ""    | UTF-8 字符串                           |
+| slice        |        | nil   | 引用类型                                |
+| map          |        | nil   | 引用类型                                |
+| channel      |        | nil   | 引用类型                                |
+| interface    |        | nil   | 接口                                  |
+| function     |        | nil   | 函数                                  |
+
 
 
 
