--- a/docs/06_基本类型.md
+++ b/docs/06_基本类型.md
@@ -25,7 +25,75 @@
 | interface    |        | nil   | 接口                                  |
 | function     |        | nil   | 函数                                  |
 
+在 Go 语言中，我们如果想使用多行的字符串我们可以使用
+```go
+package main
+
+var s string = `第一行
+第二行
+第三行
+`
+```
+## 字符串常用的方法
+| 方法                                  | 介绍      |
+|-------------------------------------|---------|
+| len(str)                            | 返回长度    |
+| +或fmt.Sprintf                       | 拼接字符串   |
+| strings.Split                       | 分割      |
+| strings.Contains                    | 判断是否包含  |
+| strings.HasPrefix,strings.HasSuffix | 前缀、后缀判断 |
+| strings.Index(),strings.LastIndex() | 子串出现的位置 |
+| strings.Join(a[]string,sep string)  | join 操作 |
 
 
+## byte 和 rune 类型
+这里和 C 语言比较像，单个字符我们使用`''`来包裹起来，这里要区分字符串 和 单个字符。
+这里我们必须得了解，在Go语言中，字符有两种
+- 一种就是我们常见的`byte`类型字符，代表 ASCII 码的一个字符。
+- 一种就是 `rune` 类型，代表我们常用的 utf-8 类型字符。
 
+如果我们给定一个带中文或者其他特殊符号的字符串，我们如果使用`for`循环，来遍历，我们获取到的每个项，都是一个`byte`类型的字符。
+遇到这种情况，我们需要使用`range`方法来遍历，这样我们的每一项都是一个`rune`类型。
 
+```go
+package main
+
+import "fmt"
+
+func traveralString() {
+	s := "pprof.cn博客"
+	for i := 0; i < len(s); i++ { // byte
+		fmt.Printf("%v(%c)", s[i],s[i])
+	}
+	fmt.Println()
+	for _,r := range s {  // rune
+		fmt.Printf("%v(%c)",r,r)
+    }
+	fmt.Println()
+}
+```
+
+## 修改字符串
+注意了，字符串不能直接修改，如果要修改字符串，我们必须先转化为`[]rune`或者`[]byte`，然后再转换为`string`。无论
+那种转换都会重新分配内存，并复制字节数组。
+
+```go
+package main
+
+import "fmt"
+
+func changeString() {
+	s1 := "hello"
+	// 强制类型转换
+	byteS1 := []byte(s1)
+	byteS1[0] = 'H'
+	fmt.Println(string(byteS1))
+	
+	s2 := "博客"
+	runeS2 := []rune(s2)
+	runeS2[0] = '狗' // 这里注意了，因为是单个rune所以我们用 ''
+	fmt.Println(string(runeS2))
+}
+```
+
+上边的强制类型转换，用到了`T(表达式)`这种语法。这里还有注意字符串的遍历的两种方式。
