learn struct datastructor

--- a/docs/14_读写文件.md
+++ b/docs/14_读写文件.md
@@ -13,8 +13,9 @@ var (
 fmt.Scanf("%s %d", &name, &age)
 ```
 
-## bufio 包
+## bufio 包（buffer io）
 bufio包实现了有缓冲的I/O。它包装一个io.Reader或io.Writer接口对象，创建另一个也实现了该接口，且同时还提供了缓冲和一
 些文本I/O的帮助函数的对象。
 
-
+我们如果频繁的读取磁盘会导致效率很低，所以官方给到我们一个`bufio`包主要是给我们提供了一个缓冲区（其实就是分配内存），就相当于读写都在这个区域进行，
+最后我们再读取，从而降低了我们的访问频率。
