--- a/docs/19_接口.md
+++ b/docs/19_接口.md
@@ -64,4 +64,21 @@ func main() {
 	usb.Start() 
 }
 ```
+## 接口和继承
+- 当A 结构体继承了 B 结构体，那么 A 结构体就继承了 B 结构体的字段和方法，并且可以直接使用
+- 当A 结构体需要扩展功能，同时不去破坏继承关系，则可以去实现某个接口即可，因此我们可以认为：实现接口是对继承机制的补充。
+- 实现接口可以看作是对继承的一种补充
+- 接口和继承解决的问题不同
+  - 继承主要价值在于解决代码的**复用性和可维护性**
+  - 接口的价值主要在于**设计**，设计好各种规范，让其它自定义类型去实现这些方法
+- 接口比继承更加灵活
+- 接口在一定程度上实现代码解耦
+
+## 多态
+接口提现多态的两种形式
+- 多态参数
+在前面的 USB 接口案例，Usb usb ,即可以接收手机变量，有可以接收相机变量，就体现了 Usb 接口多态。
+- 多态数组
+演示一个案例 给 Usb 数组中，存放Phone结构体和 Camera 结构体变量
+案例说明：
 
